@@ -100,10 +100,8 @@ For information on how to use this extension, build the documentation here or
 
 ## Testing ##
 
-Running the unit tests requires the [unittest2][ut2] package, which backports
-the functionality of the built-in `unittest` package from Python version 2.7 to
-earlier versions. This requirement is also listed in the
-`requirements-test.txt` file.
+Running the unit tests requires the [nosetests][n] library. This requirement is
+also listed in the `requirements-test.txt` file.
 
 Using `pip` is probably the easiest way to install this:
 
@@ -111,7 +109,7 @@ Using `pip` is probably the easiest way to install this:
 
 or
 
-    pip install unittest2
+    pip install nose
 
 The Python unit tests are contained in the `tests/` directory (which is a
 Python package). To run the test suite, run the command
@@ -120,17 +118,18 @@ Python package). To run the test suite, run the command
 
 You can also run the unit tests in a less verbose way by doing
 
-    ./run-tests.py
+    nosetests
 
-This is a Python module which, when executed, simply runs all unit tests.
-
-[ut2]: http://pypi.python.org/pypi/unittest2
+[n]: https://nose.readthedocs.org/
 
 ### Test coverage ###
 
 You can measure the test coverage by running
 
-    python setup.py coverage
+    nosetests --with-coverage --cover-html --cover-html-dir=<somedir>
+
+where <somedir> is the name of the directory in which the HTML formatted
+coverage report will be written.
 
 Measuring test coverage requires the [coverage.py][cov] package, which can be
 installed like this:
