@@ -1,2 +1,2 @@
 -r requirements.txt
-unittest2
+nose
